# BFH_FishyCatchy

./: .gitignore  CMakeLists.txt  README.md  eim_config.toml  sdkconfig.defaults
ML/: CMakeLists.txt  README.md  export_header.py  train_and_export.py
documentation/: .$DFD.drawio.bkp  .~lock.Projektdokumentation_RTOS_STAH_PIER.docx#  01_DataStructures_ClassDiagram.md  02_Components_Architecture.md  03_Sequence_Diagram.md  04_Detection_StateMachine.md  05_Data_ER_Diagram.md  06_Inheritance_Hierarchy.md  07_Activity_Diagram.md  DFD.drawio  Klassendiagramm.md  Project_Description.md  Projektdokumentation_RTOS_STAH_PIER.docx  Report.md
fishy_catchy/: CMakeLists.txt  idf_component.yml
fishy_catchy/include/app/: main_app.hpp
fishy_catchy/include/core/: app_context.hpp  persistent_store.hpp  rtos_objects.hpp  sensor_data.hpp  system_config.hpp  system_state.hpp
fishy_catchy/include/tasks/: led_task.hpp  processing_task.hpp  sensor_task.hpp  wifi_task.hpp
fishy_catchy/src/app/: main_app.cpp
fishy_catchy/src/core/: app_context.cpp  persistent_store.cpp  rtos_objects.cpp  sensor_data.cpp  system_config.cpp  system_state.cpp
fishy_catchy/src/tasks/: led_task.cpp  processing_task.cpp  sensor_task.cpp  wifi_task.cpp
main/: CMakeLists.txt  app_types.hpp  config_store.cpp  config_store.hpp  idf_component.yml  led_task.cpp  led_task.hpp  main.cpp  processor_task.cpp  processor_task.hpp  sensor_task.cpp  sensor_task.hpp  strike_detector.cpp  strike_detector.hpp  system_state.cpp  system_state.hpp  web_config.cpp  web_config.hpp  wifi_task.cpp  wifi_task.hpp
(+4 files in other folders)
